--- a/HappyBaseDemo.ipynb
+++ b/HappyBaseDemo.ipynb
@@ -8,7 +8,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,7 +15,8 @@
     "\n",
     "happybase主页：http://happybase.readthedocs.io/en/latest/user.html\n",
     "\n",
-    "安装: pip install happybase\n",
+    "安装:\n",
+    "pip install thrift happybase\n",
     "\n",
     "验证： python -c \"import happybase\"\n",
     "\n",
@@ -24,12 +24,15 @@
     "\n",
     "请参考： http://blog.csdn.net/sinolover/article/details/77714648\n",
     "\n",
-    "hbase表结构参考：http://blog.csdn.net/cnbird2008/article/details/9151585"
+    "hbase表结构参考：http://blog.csdn.net/cnbird2008/article/details/9151585\n",
+    "\n",
+    "外网访问时，host=112.17.80.185，port=8000\n",
+    "即用代码：conn = happybase.Connection('112.17.80.185',port=8000)连接"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
@@ -40,13 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "host = '192.168.1.254'"
+    "host = '192.168.1.250'"
    ]
   },
   {
@@ -58,11 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
-   "metadata": {},
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "conn = happybase.Connection('192.168.1.254')"
+    "conn = happybase.Connection(host)"
    ]
   },
   {
@@ -74,8 +79,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "conn.disable_table('mytable')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "conn.delete_table('mytable')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {
+    "collapsed": true,
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "conn.create_table('mytable',{'cf1':dict(max_versions=10),\n",
@@ -85,13 +115,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 98,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "table=conn.table('mytable')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[b'emp', b'myproject_mytable', b'mytable']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(conn.tables())"
    ]
   },
   {
@@ -103,7 +150,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[b'emp', b'myproject_mytable', b'mytable']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(conn.tables())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
@@ -114,8 +178,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 102,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[b'mytable']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(conn.tables())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#conn.disable_table('mytable')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#conn.delete_table('mytable')#conn.is_table_enabled('mytable') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "conn.create_table('mytable',{'cf1':dict(),})"
@@ -123,14 +228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[b'myproject_mytable', b'mytable', b'test']\n"
+      "[b'mytable']\n"
      ]
     }
    ],
@@ -147,8 +252,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
+   "execution_count": 109,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cloth_data = {'cf1:content':u'牛仔裤', 'cf1:price':'299', 'cf1:rating':'98%'}\n",
@@ -171,8 +278,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "metadata": {},
+   "execution_count": 110,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with table.batch(batch_size=10) as bat:\n",
@@ -191,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -329,14 +438,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{b'cf1:price': (b'88', 1504677372609), b'cf1:rating': (b'99%', 1504677372609)}\n"
+      "{b'cf1:price': (b'88', 1511267787213), b'cf1:rating': (b'99%', 1511267787213)}\n"
      ]
     }
    ],
@@ -347,14 +456,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[b'88', b'88', b'88', b'88', b'88', b'88', b'88']\n"
+      "[b'88']\n"
      ]
     }
    ],
@@ -365,14 +474,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[b'88', b'88', b'88']\n"
+      "[b'88']\n"
      ]
     }
    ],
@@ -390,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true
    },
@@ -401,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 121,
    "metadata": {
     "collapsed": true
    },
@@ -412,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 122,
    "metadata": {
     "collapsed": true
    },
@@ -430,16 +539,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
-   "metadata": {},
+   "execution_count": 123,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "pool = happybase.ConnectionPool(size=3,host= '192.168.1.254',table_prefix='myproject')"
+    "pool = happybase.ConnectionPool(size=3,host= host,table_prefix='myproject')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
